# tatouV1

./: LICENSE  Platform_specifications.md  README.md  docker-compose.yml  flag  sample.env  test1.py
db/: tatou.sql
docs/: RESPONSIBLE_DISCLOSURE.md
scripts/: rotate_flags.sh
server/: API.md  Dockerfile  flag  pyproject.toml
server/src/: add_after_eof.py  server.py  unsafe_bash_bridge_append_eof.py  watermarking_cli.py  watermarking_method.py  watermarking_utils.py
server/src/static/: documents.html  index.html  login.html  signup.html  style.css
server/test/: test_api.py  test_watermarking_all_methods.py
tests/: test_security_core.py
